css/styles.css
html {
    overflow-y: scroll;
}

body {
    margin: 0px;
    background-color: #2f2f2f;
    font-family: "Open Sans";
    font-size: 15px;
    color: #999;
}

p {
    margin: 0px 0px 15px;
}

a,
a#download-link:hover {
    text-decoration: none;
    color: #bbb;
    transition: color .10s linear;
    -webkit-transition: color .10s linear;
}

a:hover,
#download-version a:hover {
    color: #ff5a11;
    transition: color .10s linear;
    -webkit-transition: color .10s linear;
}

a, img {
    border: none;
}

h1 {
    font-size: 25px;
}

h2 {
    margin-bottom: 10px;
    font-size: 21px;
}

h3 {
    font-size: 17px;
}

h1, h2, h3 {
    margin-top: 0px;
    color: #bbb;
}

hr {
    margin-bottom: 30px;
    background-color: #444;
    border: none;
    height: 1px;
}

iframe {
    background-color: transparent;
    border: 0px none transparent;
    padding: 0px;
    overflow: hidden;
}

#header {
    height: 225px;
    background-color: #282828;
    text-align: center;
}

#logo {
    padding: 30px;
}


#navigation ul {
    margin: 0px;
    padding: 0px;
    list-style-type: none;
    text-align: center;
}

#navigation ul li {
    display: inline;
}

#navigation ul li a {
    text-decoration: none;
    padding: .2em 1.2em;
    color: #777;
}

#navigation ul li a:hover {
    color: #bbb;
}

#navigation ul li a.active {
    color: #bbb;
}

#wrapper {
    width: 960px;
    margin: 0 auto;
    padding-top: 30px;
}

#splash-wrapper {
    width: 960px;

    /* Firefox */
    display: -moz-box;
    -moz-box-pack: center;
    -moz-box-align: center;

    /* Safari and Chrome */
    display:-webkit-box;
    -webkit-box-pack: center;
    -webkit-box-align: center;

    /* W3C */
    display: box;
    box-pack: center;
    box-align: center;
}

#splash {
    width: 735px;
    margin: 0 0 35px;
}

#download-button-wrapper {
    float: left;
}

#download-button {
    width: 200px;
    margin-top: 5px;
    margin-bottom: 10px;
    padding-top: 4px;
    padding-bottom: 8px;
    text-align: center;
    background-color: #444;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    cursor: pointer;
    transition: background-color 0.10s linear;
    -webkit-transition: background-color 0.10s linear;
}

#download-button:hover {
    background-color: #4C4C4C;
    transition: background-color 0.10s linear;
    -webkit-transition: background-color 0.10s linear;
}

#download-cta {
    font-weight: bold;
    font-size: 24px;
}

#download-version {
    width: 100%;
    font-size: 12px;
    text-align: center;
}

#download-version a {
    color: #666;
}

#splash-message {
    float: left;
    margin-left: 50px;
    width: 468px;
    line-height: 1.8em;
}

.slick-loading .slick-list {
    background-image: url(/img/ajax-loader.gif)
}

.slick-slider {
    margin-bottom: 55px;
}

.slick-dots li button:before {
    color: #ff6600;
    font-size: 10px;
}

#latest-news {
    float: left;
    width: 265px;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 1.3em;
}

#news-container {
    float: left;
    margin-left: 42px;
    width: 653px;
}

.more-news {
    margin-top: 25px;
}

article {
    margin-bottom: 35px;
}

article .date {
    margin-bottom: 15px;
    font-size: 13px;
    color: #666;
}

article p a {
    border-bottom: 1px dashed #666;
    transition: color .10s linear, border-bottom-color .10s linear;
    -webkit-transition: color .10s linear, border-bottom-color .10s linear;
}

article p a:hover {
    border-bottom-color: #ff5a11;
    transition: color .10s linear, border-bottom-color .10s linear;
    -webkit-transition: color .10s linear, border-bottom-color .10s linear;
}

.team-member {
    margin-bottom: 60px;
    overflow: auto;
    width: 100%;
}

.team-member img {
    float: left;
    margin-right: 60px;
    margin-bottom: 30px;
}

.team-member .info {
    overflow: hidden;
}

.team-member .info h4 {
    margin-top: 0px;
    margin-bottom: 10px;
}

.team-member .info ul.links {
    list-style-type: none;
    padding-left: 0px;
    margin-bottom: 0px;
}

.clear {
    clear: both;
}

#footer-container {
    margin-top: 35px;
    background-color: #282828;
    text-align: center;
}

#footer-inner {
    display: inline-block;
}

.footer-block {
    float: left;
    margin: 30px 15px 15px 15px;
    text-align: left;
}

.footer-block,
.footer-block a {
    color: #666;
}

.footer-block a:hover {
    color: #bbb;
}

.footer-block h4 {
    margin-top: 0px;
    margin-bottom: 12px;
    text-transform: uppercase;
}

.footer-block ul {
    padding: 0px;
    margin: 0px;
    list-style-type: none;
}

.footer-block ul li {
    margin-bottom: 5px;
}

#contact {
    width: 200px;
}

#github {
    width: 140px;
}

#external-projects {
    width: 200px;
}

#social ul > li {
    display: inline-block;
    *display: inline;
    margin-top: 5px;
    margin-right: 10px;
    zoom: 1;
}

#copyright {
    width: 100%;
    text-align: center;
    padding-bottom: 30px;
}

#copyright,
#copyright a {
    color: #444;
}

#copyright a:hover {
    color: #bbb;
}

